Performed a total redisign of the website homepage

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -1,26 +1,94 @@
 <html>
     <head>
-        <title></title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Matthew Glen</title>
+        <link rel="stylesheet" type="text/css" href="slick/slick.css">
+        <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
     </head>
     <body>
         <header>
             <h1>Matthew Glen</h1>
         </header>
         <section>
-            <h1>This will hold a picture of myself and a short mission statement. It ends with a button that downloads my resume</h1>
-            <img src="https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTQyNjgwMDQ0NjE4MTMwNzU4/gettyimages-503700338jpg.jpg" alt="Image of Matthew Glen">
-            <button>Download Resume</button>
+            <h1>
+                <img src="https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTQyNjgwMDQ0NjE4MTMwNzU4/gettyimages-503700338jpg.jpg" alt="Image of Matthew Glen">
+                This will hold a picture of myself and a short mission statement. It ends with a button that downloads my resume
+                <button>Download Resume</button>
+            </h1>
         </section>
+        <hr>
         <section>
-            <h1>This details all of the projects I've done with github links</h1>
+            <h1>Projects</h1>
+            <div class="projects">
+                <div>
+                    <img src="assets/website.png" alt="Picture of Website Development Environment">
+                    <h2>Professional Website</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin finibus, eros in feugiat rhoncus, 
+                        libero velit rhoncus leo, sed tincidunt orci sapien sit amet augue. Vestibulum vel ante aliquet, tempor sem at, 
+                        sodales dui.
+                    </p>
+                    <a href="https://github.com/mwg2202/ProfessionalWebsite" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+                <div>
+                    <img src="assets/website.png" alt="Picture of Website Development Environment">
+                    <h2>Meal Planning Application</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin finibus, eros in feugiat rhoncus, 
+                        libero velit rhoncus leo, sed tincidunt orci sapien sit amet augue. Vestibulum vel ante aliquet, tempor sem at, 
+                        sodales dui.
+                    </p>
+                    <div>
+                        <a href="localhost:8082" target="_blank" rel="noopener noreferrer">
+                            <h3>Visit Website</h3>
+                        </a>
+                        <a href="https://github.com/mwg2202/RecipeApp" target="_blank" rel="noopener noreferrer">
+                            <h3>View Source</h3>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <img src="assets/website.png" alt="Picture of Website Development Environment">
+                    <h2>Differential Equation Solver</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin finibus, eros in feugiat rhoncus, 
+                        libero velit rhoncus leo, sed tincidunt orci sapien sit amet augue. Vestibulum vel ante aliquet, tempor sem at, 
+                        sodales dui.
+                    </p>
+                    <a href="localhost:8083" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/PDESolver" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+            </div>
             
         </section>
+        <hr>
         <section>
-            <h1>This contains a link to many mini-projects with a brief description of each.</h1>
+            <h1>Mini-Projects</h1>
+            <h3>Miniprojects will be here</h3>
+        </section>
+        <hr>
+        <section>
+            <h1>Homework</h1>
+            <h3>Some of my Homework is available via Github</h3>
+            <a href="https://github.com/mwg2202/Homework" target="_blank" rel="noopener noreferrer">
+                <h3>View Source</h3>
+            </a>
         </section>
         <footer>
-            <h2>Contains information to contact me</h1>
+            <h1>Contact Information</h1>
+            <h2>Email: mwglen@ncsu.edu</h2>
+            <h2>Personal Email: mwg2202@gmail.com</h2>
+            <h2>Cell: (252) 548-1938</h2>
         </footer>
-                
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="slick/slick.min.js"></script>
     </body>
 </html>
