improved responsive design and finished homepage for mobile devices

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -41,14 +41,12 @@
                         libero velit rhoncus leo, sed tincidunt orci sapien sit amet augue. Vestibulum vel ante aliquet, tempor sem at, 
                         sodales dui.
                     </p>
-                    <div>
-                        <a href="localhost:8082" target="_blank" rel="noopener noreferrer">
-                            <h3>Visit Website</h3>
-                        </a>
-                        <a href="https://github.com/mwg2202/RecipeApp" target="_blank" rel="noopener noreferrer">
-                            <h3>View Source</h3>
-                        </a>
-                    </div>
+                    <a href="localhost:8082" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/RecipeApp" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
                 </div>
                 <div>
                     <img src="assets/website.png" alt="Picture of Website Development Environment">
@@ -70,8 +68,75 @@
         </section>
         <hr>
         <section>
-            <h1>Mini-Projects</h1>
-            <h3>Miniprojects will be here</h3>
+            <h1>Mini-Pojects</h1>
+            <div class="miniprojects">
+                <div>
+                    <img src="assets/website.png" alt="Mini-Program 1">
+                    <h2>Title</h2>
+                    <p>Mini-Program 1</p>
+                    <a href="http://localhost:9000" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/Demos" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+                <div>
+                    <img src="assets/website.png" alt="Mini-Program 2">
+                    <h2>Title</h2>
+                    <p>Mini-Program 2</p>
+                    <a href="http://localhost:9000" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/Demos" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+                <div>
+                    <img src="assets/website.png" alt="Mini-Program 3">
+                    <h2>Title</h2>
+                    <p>Mini-Program 3</p>
+                    <a href="http://localhost:9000" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/Demos" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+                <div>
+                    <img src="assets/website.png" alt="Mini-Program 4">
+                    <h2>Title</h2>
+                    <p>Mini-Program 4</p>
+                    <a href="http://localhost:9000" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/Demos" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+                <div>
+                    <img src="assets/website.png" alt="Mini-Program 5">
+                    <h2>Title</h2>
+                    <p>Mini-Program 5</p>
+                    <a href="http://localhost:9000" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/Demos" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+                <div>
+                    <img src="assets/website.png" alt="Mini-Program 6">
+                    <h2>Title</h2>
+                    <p>Mini-Program 6</p>
+                    <a href="http://localhost:9000" target="_blank" rel="noopener noreferrer">
+                        <h3>Visit Website</h3>
+                    </a>
+                    <a href="https://github.com/mwg2202/Demos" target="_blank" rel="noopener noreferrer">
+                        <h3>View Source</h3>
+                    </a>
+                </div>
+            </div>
         </section>
         <hr>
         <section>
