--- a/src/homepage.html
+++ b/src/homepage.html
@@ -9,8 +9,13 @@
     <body>
         <header>
             <h1>Matthew Glen</h1>
+            <a href="#Introduction"><h2>Introduction</h2></a>
+            <a href="#Projects"><h2>Projects</h2></a>
+            <a href="#MiniProjects"><h2>Mini-Projects</h2></a>
+            <a href="#Homework"><h2>Homework</h2></a>
+            <a href="#ContactInformation"><h2>Contact Information</h2></a>
         </header>
-        <section>
+        <section id="Introduction">
             <h1>
                 <img src="https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTQyNjgwMDQ0NjE4MTMwNzU4/gettyimages-503700338jpg.jpg" alt="Image of Matthew Glen">
                 This will hold a picture of myself and a short mission statement. It ends with a button that downloads my resume
@@ -18,7 +23,7 @@
             </h1>
         </section>
         <hr>
-        <section>
+        <section id="Projects">
             <h1>Projects</h1>
             <div class="projects">
                 <div>
@@ -67,7 +72,7 @@
             
         </section>
         <hr>
-        <section>
+        <section id="MiniProjects">
             <h1>Mini-Pojects</h1>
             <div class="miniprojects">
                 <div>
@@ -139,14 +144,14 @@
             </div>
         </section>
         <hr>
-        <section>
+        <section id="Homework">
             <h1>Homework</h1>
             <h3>Some of my Homework is available via Github</h3>
             <a href="https://github.com/mwg2202/Homework" target="_blank" rel="noopener noreferrer">
                 <h3>View Source</h3>
             </a>
         </section>
-        <footer>
+        <footer id="ContactInformation">
             <h1>Contact Information</h1>
             <h2>Email: mwglen@ncsu.edu</h2>
             <h2>Personal Email: mwg2202@gmail.com</h2>
